--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,17 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-daemonize = "0.4.1"
+clap = "2.33.3"
+serde = { version = "1.0.130", features = ["derive"] }
+serde_derive = "1.0.130"
+rmp = "0.8.10"
+rmp-serde = "0.15.5"
+rmpv = "0.4.7"
+
+[[bin]]
+name = "client"
+path = "src/client/main.rs"
+
+[[bin]]
+name = "server"
+path= "src/server/main.rs"
