--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,10 @@ edition = "2018"
 [dependencies]
 clap = "2.33.3"
 serde = { version = "1.0.130", features = ["derive"] }
-serde_derive = "1.0.130"
+serde_json = "1.0.67"
 rmp = "0.8.10"
 rmp-serde = "0.15.5"
-rmpv = "0.4.7"
+rmpv = { version = "0.4.7", features = ["with-serde"] }
 
 [[bin]]
 name = "client"
