--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ serde_json = "1.0.67"
 rmp = "0.8.10"
 rmp-serde = "0.15.5"
 rmpv = { version = "0.4.7", features = ["with-serde"] }
+num_enum = "0.5.4"
 
 [[bin]]
 name = "client"
