--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ rmp-serde = "0.15.5"
 rmpv = { version = "0.4.7", features = ["with-serde"] }
 num_enum = "0.5.4"
 dirs = "3.0.2"
+flate2 = "1.0.22"
 
 [[bin]]
 name = "emacs-remote-client"
