Started working on scp infrastructure

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ num_enum = "0.5.4"
 dirs = "3.0.2"
 flate2 = "1.0.22"
 ssh = "0.1.4"
+ssh_config = "0.1.0"
 
 [[bin]]
 name = "emacs-remote-client-interface"
