--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,9 @@ rmpv = { version = "0.4.7", features = ["with-serde"] }
 num_enum = "0.5.4"
 dirs = "3.0.2"
 flate2 = "1.0.22"
-ssh = "0.1.4"
+ssh2 = "0.9.1"
 ssh_config = "0.1.0"
+whoami = "1.1.5"
 
 [[bin]]
 name = "emacs-remote-client-interface"
