Started working on python client daemon

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,3 +21,7 @@ repos:
     hooks:
     -   id: fmt
     -   id: cargo-check
+-   repo: https://github.com/psf/black
+    rev: main
+    hooks:
+    -   id: black
