--- a/prototype/Cargo.toml
+++ b/prototype/Cargo.toml
@@ -6,8 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = "3.1.8"
-dirs = "4.0.0"
+# clap = "2.33.3"
 # serde = { version = "1.0.130", features = ["derive"] }
 # serde_json = "1.0.67"
 # rmp = "0.8.10"
@@ -20,15 +19,6 @@ dirs = "4.0.0"
 # ssh_config = "0.1.0"
 # whoami = "1.1.5"
 
-
 [[bin]]
-name = "emacs-local-client"
-path = "src/local_client.rs"
-
-# [[bin]]
-# name = "emacs-local-daemon"
-# path = "src/local_daemon.rs"
-
-# [[bin]]
-# name = "emacs-remote-daemon"
-# path = "src/_daemon.rs"
+name = "prototype"
+path = "main.rs"
