--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,10 @@ clap = { version = "3.1.8", features = ["derive"] }
 dirs = "4.0.0"
 log = "0.4.16"
 log4rs = "1.0.0"
-# serde = { version = "1.0.130", features = ["derive"] }
+serde = { version = "1.0.136", features = ["derive"] }
 # serde_json = "1.0.67"
 # rmp = "0.8.10"
-# rmp-serde = "0.15.5"
+rmp-serde = "1.1.0"
 # rmpv = { version = "0.4.7", features = ["with-serde"] }
 # num_enum = "0.5.4"
 # flate2 = "1.0.22"
